# Verbatim

./: .gitignore  AGENTS.md  Cargo.toml  GPU_OPTIMIZATION_PLAN.md  MULTILAYER_PLAN.md  PLAN.md  WORLDGEN_PLAN.md  benchmark_results.json  headless_dump.txt
assets/shaders/: cell.frag  cell.vert  cell_frag.spv  cell_vert.spv  graphics.frag  graphics.vert  graphics_frag.spv  graphics_vert.spv
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scenarios/: acid_dissolves_wood.json  acid_eats_through_wall.json  entity_burns_in_lava.json  entity_survives_fall.json  fire_chain_wood.json  fire_spreads_through_grass.json  lava_ignites_wood.json  lava_plus_water_makes_steam.json  lava_pool_interaction.json  player_falls_and_lands.json  sand_buries_wood.json  sand_falls_down.json  steam_condenses.json  water_flows_sideways.json
src/: game.rs  input.rs  lib.rs  main.rs
src/ai/: action.rs  mod.rs  protocol.rs  replay.rs  scenario.rs  session.rs  spectrum.rs  state.rs  tape.rs
src/audio/: mod.rs
src/entity/: item.rs  (+4 more)
tests/: body_template.rs  chunks.rs  collision_robust.rs  descent.rs  determinism.rs  edge_cases.rs  entity_damage.rs  entity_movement.rs  integration.rs  inventory.rs  large_world.rs  multilayer.rs  perf_corpses.rs  physics_acid.rs  physics_interactions.rs  physics_lava.rs  physics_materials.rs  physics_sand.rs  physics_water.rs  player_controls.rs  projectiles.rs  ragdoll_death.rs  rpg.rs  slime.rs  worldgen.rs
tools/: render_dump.py
(+23 files in other folders)
