[package]
name = "verbatim"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minifb = "0.27"
fontdue = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
