[package]
name = "verbatim"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdue = "0.9"
winit = "0.30"
softbuffer = "0.4"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
